2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/GroupWindow.cs, Banter/PersonCard.cs: Added tool tips

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Removed the users controls when they are in the
	  process of being removed

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ProviderUser.cs: Updated exceptions to state the actual
	  problem
	* Banter/PersonCard.cs: Added calls to RevokeInvitations and remove
	  users

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Updated to handle accepting invitations very
	  well!  Also modified so there is only one remove and it's the same
	  for all people

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, Banter/SidebarTextButton.cs, Banter/Makefile.am: Added
	  SidebarTextButton
	* Banter/GroupWindow.cs, Banter/PersonCard.cs, Banter/PersonView.cs:
	  Added button to remove people

2007-08-03  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: added method to invite a remote user

2007-08-03  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: added methods to deny authorization
	* Banter/ProviderUser.cs: added method to deny authorization
	* Banter/PersonCard.cs: added methods to authorize a user

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Updated pending people to look better

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Added new Add/Remove buttons for people
	  requesting authorization

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Fixed up invitations so you can almost accept
	  them

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/GroupWindow.cs: Removed unimplemented groups and added Add
	  Person functionality
	* Banter/HIGMessageDialog.cs: Fixed up to have a window title

2007-08-03  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/PersonCard.cs: added methods to authorize a user
