@@ -1,284 +1,0 @@
-2007-04-24  Calvin Gaisford <calvinrg@gmail.com> 
-
-	* Utilities.cs, Defines.cs, Avatar.cs, Logger.cs, PreferencesDialog.cs,
-	  AvatarRequirements.cs, AccountManagement.cs, Account.cs,
-	  XmlFilePreferencesProvider.cs, Application.cs, Person.cs,
-	  ChatWindow.cs, Message.cs, GConfPreferencesProvider.cs,
-	  VideoWindow.cs, PersonCard.cs, MessageStyleManager.cs,
-	  Preferences.cs, PersonView.cs, MessageStore.cs, MessagesView.cs,
-	  MessageStyle.cs, ActionManager.cs, Conversation.cs: Moved the
-	  namespace to Novell.Banter
-	* banter.in: Added in mozilla finding script to startup
-
-2007-04-13  Calvin Gaisford <cgaisford@novell.com> 
-
-	* VideoWindow.cs: Updated window size so the images are not distorted,
-	  but they are still smaller
-
-2007-04-13  Calvin Gaisford <cgaisford@novell.com> 
-
-	* VideoWindow.cs: Updated to make the preview windows smaller
-
-2007-04-13  Calvin Gaisford <cgaisford@novell.com> 
-
-	* VideoConversation.cs: Turned off audio channel request
-	* PersonView.cs: Removed superfluous code	
-
-2007-04-13  Calvin Gaisford <cgaisford@novell.com> 
-
-	* PersonView.cs: Made the default window a little larger
-
-2007-04-13  Calvin Gaisford <cgaisford@novell.com> 
-
-	* PersonCard.cs: Added status and chat icon to view
-	* PersonView.cs: Changed the name of the window
-
-2007-04-13  Boyd Timothy <btimothy@novell.com> 
-
-	* ChatWindow.cs: Set the default focus to be the typing TextView.
-
-2007-04-13  Boyd Timothy <btimothy@novell.com> 
-
-	* ChatWindow.cs: Set the chat window title.
-
-2007-04-13  Boyd Timothy <btimothy@novell.com> 
-
-	* VideoConversation.cs: Re-enabled audio support (fingers crossed).
-
-2007-04-12  Boyd Timothy <btimothy@novell.com> 
-
-	* VideoConversation.cs: Don't create the media channel on incoming
-	  calls.
-	* Application.cs: Call the new VideoConversations with proper
-	  constructors.  Pass along the incoming media channel on an incoming
-	  call.
-
-2007-04-12  Boyd Timothy <btimothy@novell.com> 
-
-	* VideoConversation.cs: Added MembersChanged handler and doing video
-	  only now.
-
-2007-04-12  Boyd Timothy <btimothy@novell.com> 
-
-	* VideoConversation.cs: Fixed up the connection stuff to use the right
-	  connection and not get any null messages.
-
-2007-04-12  Boyd Timothy <btimothy@novell.com> 
-
-	* VideoConversation.cs: Fixed up bus names.
-
-2007-04-12  Calvin Gaisford <cgaisford@novell.com> 
-
-	* Application.cs: added a check to determine if we initialze the
-	  conversation
-
-2007-04-12  Boyd Timothy <btimothy@novell.com> 
-
-	* VideoConversation.cs: Added code to remove saved streams.
-
-2007-04-12  Boyd Timothy <btimothy@novell.com> 
-
-	* VideoConversation.cs: Removed all the old crap since we don't do
-	  connections in here anymore.  Reworked the constructor to know
-	  whether we're an incoming/outgoing chat.  Added dictionaries to
-	  keep track of the stream types.
-	* Application.cs: Call the VideoConversation constructors properly.
-	* Member.cs: Add a Connection property.
-
-2007-04-12  Calvin Gaisford <cgaisford@novell.com> 
-
-	* Application.cs: Changed media channel handler to only take a member
-
-2007-04-12  Calvin Gaisford <cgaisford@novell.com> 
-
-	* Application.cs: Added handler for incoming media conversation
-
-2007-04-12  Calvin Gaisford <cgaisford@novell.com> 
-
-	* VideoConversation.cs: Changed constructor to take a member for the
-	  conversation
-	* Application.cs: Added method to start a video conversation
-	* PersonCard.cs: Added the video chat action
-
-2007-04-12  Calvin Gaisford <cgaisford@novell.com> 
-
-	* VideoConversation.cs: Fixed up code to make the connection the way it
-	  should be
-	* Application.cs: Added the gabble code back in and enabled
-	  multi-threaded stuff for the new ndesk-dbus
-
-2007-04-10  Calvin Gaisford <cgaisford@novell.com> 
-
-	* VideoConversation.cs: Multiple changed experimenting with video
-	* Application.cs: Removed the startup for text chat to enable quick
-	  video, it's marked as VIDEO
-
-2007-04-09  Calvin Gaisford <cgaisford@novell.com> 
-
-	* VideoConversation.cs: New Hacked Video Conversation class to prove we
-	  can do video
-	* VideoWindow.cs: Sample Video window to display our new video channel
-
-2007-04-09  Boyd Timothy <btimothy@novell.com> 
-
-	* Application.cs: Fix SIP creds.
-
-2007-04-09  Boyd Timothy <btimothy@novell.com> 
-
-	* Application.cs: Save the SIP username and password.
-
-2007-04-09  Boyd Timothy <btimothy@novell.com> 
-
-	* PreferencesDialog.cs: Added code to show simple SIP account
-	  information.
-	* Preferences.cs: Added SipServer and SipPort.
-	* AccountManagement.cs: Added code to store generic credentials so we
-	  can use it for SIP and GoogleTalk for now.
-
-2007-04-06  Boyd Timothy <btimothy@novell.com> 
-
-	Single chat window baby!
-
-2007-04-06  Boyd Timothy <btimothy@novell.com> 
-
-	It's working pretty much!
-
-2007-04-06  Boyd Timothy <btimothy@novell.com> 
-
-	* Connection.cs: SetupMe -> SetMeUp.  Commented out Bus.Session.Iterate
-	  ().
-	* Application.cs: Moved BusG.Init to be called right after Main is
-	  called.
-	
-	  
-	
-	  Also protect the InitializePersons in a GLib.Idle.Add () call so
-	  it's thread safe.
-	* ChatWindow.cs: Fixed up OnMessageSent so that it works!
-	* Conversation.cs:  Added debug msgs.
-
-2007-04-06  Boyd Timothy <btimothy@novell.com> 
-
-	* Application.cs: Fixed the constructor to Conversation to reverse
-	  me/peer.
-
-2007-04-05  Boyd Timothy <btimothy@novell.com> 
-
-	* PreferencesDialog.cs: Use the variant as specified in the
-	  preferences.  Removed unnecessary debug log lines.
-	* MessageStyleManager.cs: Removed unnecessary debug log lines.
-	* Preferences.cs: Set default variant to be "Blue vs Green".
-	* MessagesView.cs: Load the saved variant.
-	* MessageStyle.cs: Fixed the code so it creates variant HTML files
-	  properly.
-
-2007-04-05  Boyd Timothy <btimothy@novell.com> 
-
-	* PreferencesDialog.cs: Fixed up selecting the MessageStyle variant. 
-	  Need to still have the variant actually work.
-
-2007-04-05  Boyd Timothy <btimothy@novell.com> 
-
-	* PreferencesDialog.cs: Stubbed out an accounts tab.  Also prevent a
-	  null exception in PopulateVariantComboBox.  Check for a valid
-	  TreeIter before selecting the messageStyle in the combo box.
-	* MessageStyleManager.cs: Added debug messages to let us know if a
-	  default message style is being selected by default.
-
-2007-04-05  Boyd Timothy <btimothy@novell.com> 
-
-	* Preferences.cs: Return a default for MESSAGE_STYLE_NAME.
-	* MessageStyle.cs: Fixed up ToString ().
-
-2007-04-05  Boyd Timothy <btimothy@novell.com> 
-
-	* Application.cs: Stubbing out opening a preferences dialog.  Also
-	  changed some global actions to use the ActionManger.
-	* RtcApplication.mdp: Added ActionManager.cs and UIManagerLayout.xml.
-	* UIManagerLayout.xml: Stubbed out for future use.
-	* ActionManager.cs: Stubbing out ActionManager to deal with global
-	  actions and also the UIManager.
-
-2007-04-05  Boyd Timothy <btimothy@novell.com> 
-
-	* AccountManagement.cs: Use Gnome.Keyring to retrieve the GoogleTalk
-	  credentials.  For now, if not found there, it will fallback on the
-	  old GConf settings.
-	* RtcApplication.mdp: Reference Gnome.Keyring from the Gac.
-	* Preferences.cs: Use GConfPreferencesProvider by default.
-
-2007-04-04  Boyd Timothy <btimothy@novell.com> 
-
-	* PreferencesDialog.cs: A preferences dialog.
-	* Account.cs: Fixed a typo "sssl" -> "ssl"
-	* XmlFilePreferencesProvider.cs: Preferences provider to work off of an
-	  XML file.  We probably won't use this, but it's there just in case.
-	* Message.cs: Added an EmailMessage class.
-	* RtcApplication.mdp: Added GConfPreferencesProvider.cs,
-	  Preferences.cs, PreferencesDialog.cs,
-	  XmlFilePreferencesProvider.cs, and Logger.cs.
-	
-	  
-	
-	  Also added a reference to Gnome.Keyring (available from our
-	  telepathy repository).
-	* GConfPreferencesProvider.cs: Preferences provider for GConf.
-	* MessageStyleManager.cs: Added code to select a MessageStyle based on
-	  a user property.
-	* Preferences.cs: Static class to get/set application preferences.
-	* MessagesView.cs: Adding in code for MessageStyle variants.
-	* MessageStyle.cs: Added code for MessageStyle variants.
-
-2007-04-03  Boyd Timothy <btimothy@novell.com> 
-
-	* Logger.cs: Added new Logger for debug/info/app logging.  Creates
-	  ~/.rtc.log file.
-
-2007-03-30  Calvin Gaisford <cgaisford@novell.com> 
-
-	Following calvin and brady's example:
-	
-	Changed stuff!
-
-2007-03-30  Boyd Timothy <btimothy@gmail.com> 
-
-	* ChatWindow.cs: Implemented OnMessageSent () to just call
-	  OnMessageReceived () since it does the same thing.
-
-2007-03-30  Boyd Timothy <btimothy@gmail.com> 
-
-	* MessagesView.cs: Remove commented-out line.
-	* ChatWindow.cs: Implemented OnMessageReceived.
-
-2007-03-30  Calvin Gaisford <cgaisford@novell.com> 
-
-	* PersonCard.cs: Added code to call Application to initiate a chat
-	* PersonView.cs: Added methods to add persons to the UI
-	* Application.cs: Added member to track chatWindows and a method to
-	  initiate a chat
-
-2007-03-30  Boyd Timothy <btimothy@gmail.com> 
-
-	* Message.cs: Changed the public constructor in the abstract class to
-	  be protected as recommended in section 4.4 of the Framework Design
-	  Guidelines book.  Added "Text" as a property of the abstract
-	  Message class and adjusted TextMessage and SystemMessage
-	  accordingly.
-	* MessagesView.cs: Use message.Text instead of message.Message.  Also
-	  use message.Creation.ToString () instead of DateTime.Now.ToString
-	  () for the message timestamp.
-	* MessageEngine.cs: Use txtMessage.Text instead of txtMessage.Message.
-
-2007-03-30  Calvin Gaisford <cgaisford@novell.com> 
-
-	* Main.cs: renamed to Application.cs
-	* AccountManagement.cs: Removed some test code
-	* Application.cs: Renamed from Main.cs.  Made the class a singleton,
-	  added methods.
-	* Person.cs: Removed old methods and data and converted to the new
-	  improved Person object
-
-2007-03-30  Boyd Timothy <btimothy@gmail.com> 
-
-	* Utilities.cs: Added some string replacement methods.
-
