@@ -1,5 +1,16 @@
 2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* ChangeLog, Banter/Application.cs: Applied patch from Johnny Jacob
+	  <jjohnny@novell.com>
+	* Banter/ChangeLog: Removed outdated changelog... all changes go in the
+	  root changelog
+
+2007-08-04  Johnny Jacob  <jjohnny@novell.com>
+
+	* Application.cs : Open/Show GroupWindow on left click on trayicon
+
+2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* Banter/GroupWindow.cs, Banter/PersonCard.cs: Added tool tips
 
 2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
